--- a/#src/scss/layout/footer.scss
+++ b/#src/scss/layout/footer.scss
@@ -49,6 +49,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    gap: 48px;
 
 
     &_logo{
@@ -181,7 +182,7 @@
 
 
 
-    @media (max-width: 1500px) {
+    @media (max-width: 1024px) {
       width: 200px;
     }
 
@@ -197,7 +198,7 @@
       font-weight: 400;
       line-height: 16px;
       letter-spacing: -0.24px;
-      @media (max-width: 1500px) {
+      @media (max-width: 1200px) {
         flex-direction: column;
         gap:8px;
         align-items: flex-end;
@@ -229,7 +230,7 @@
     &_btn {
       display: flex;
       justify-content: space-between;
-      @media (max-width: 1500px) {
+      @media (max-width: 1024px) {
         flex-direction: column;
         gap:8px;
         align-items: flex-end;
