--- a/#src/components/vps/_calculator.html
+++ b/#src/components/vps/_calculator.html
@@ -1,4 +1,5 @@
 <div id="vps-calculator" class="vps__custom-calculator container">
     <div class="vps__calculator"></div>
+    <div class="vlan__calculator"></div>
 </div>
 
