refactoring: create Tariff

--- a/#src/components/vps/_tariffs.html
+++ b/#src/components/vps/_tariffs.html
@@ -11,7 +11,7 @@
                 </svg>
                 <h2>Лёгкий</h2>
             </div>
-            <div class="tariff__details tariff__details_light" id="light"></div>
+            <div class="tariff__details tariff__details_light" id="light" data-color="black"></div>
         </div>
         <div class="tariff__card tariff__card_optima">
             <div class="tariff__name">
@@ -23,7 +23,7 @@
                 </svg>
                 <h2>Оптимальный</h2>
             </div>
-            <div class="tariff__details tariff__details_optima" id="optima"></div>
+            <div class="tariff__details tariff__details_optima" id="optima" data-color="black"></div>
         </div>
         <div class="tariff__card tariff__card_best">
             <div class="tariff__name">
@@ -36,7 +36,7 @@
                 </svg>
                 <h2>Улучшенный</h2>
             </div>
-            <div class="tariff__details tariff__details_best" id="best"></div>
+            <div class="tariff__details tariff__details_best" id="best" data-color="white"></div>
         </div>
         <div class="tariff__card tariff__card_max">
             <div class="tariff__name">
@@ -49,7 +49,7 @@
                 </svg>
                 <h2>Максимальный</h2>
             </div>
-            <div class="tariff__details tariff__details_max" id="max"></div>
+            <div class="tariff__details tariff__details_max" id="max" data-color="white"></div>
         </div>
     </div>
 </div>
