--- a/#src/scss/base/custom-range.scss
+++ b/#src/scss/base/custom-range.scss
@@ -13,8 +13,17 @@
     gap: 0.2rem;
     font-family: inter, sans-serif;
 
-    &-input{
+    &-input {
       background: transparent;
+      -moz-appearance: textfield;
+      font-size: 14px !important;
+
+      &::-webkit-inner-spin-button,
+      &::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
+
     }
 
 
@@ -38,6 +47,11 @@
       padding: 2px 8px;
       min-width: 80px;
       max-width: 100px;
+      height: 22px;
+
+      & > span{
+        text-wrap: nowrap;
+      }
 
       &_tip{
         position: relative;
