--- a/#src/scss/base/custom-range.scss
+++ b/#src/scss/base/custom-range.scss
@@ -46,7 +46,7 @@
       background: rgba(0, 0, 0, 0.05);
       padding: 2px 8px;
       min-width: 80px;
-      max-width: 100px;
+      //max-width: 100px;
       height: 22px;
 
       & > span{
@@ -56,6 +56,7 @@
       &_tip{
         position: relative;
         cursor: pointer;
+        height: 22px;
 
         & .tip {
           display: none;
